# ChangeLog for dev-games/libtpproto-cpp
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libtpproto-cpp-0.1.0 (20 Jan 2007)

  20 Jan 2007; Jure Repinc <jlp@holodeck1.com> libtpproto-cpp-0.1.0.ebuild:
  Initial import