@@ -1,4 +1,4 @@
 DIST libtpproto-cpp-0.1.0.tar.gz 365113 RMD160 13f204b70c4a50109737dbbf85a82866597b5e25 SHA1 e574728d3135120e98bc40df685f306ce1c3f896 SHA256 60259f077773b94cd25272bcc43b909a542c5f6f3f80547a55bff11b5e07db6d
-EBUILD libtpproto-cpp-0.1.0.ebuild 817 RMD160 9edb1623ef79451cf268d21bb550f2759edb7da1 SHA1 c1491797b88727c60f2561fdcc32464420f9f9ac SHA256 72f789ea54511dfbb8bc04a9dad8c09ac480a9b800548d74b5e2868771c5512f
-MISC ChangeLog 255 RMD160 c27d6a816e494c958b00df88055496f71792536f SHA1 fe398dec00e4e438fe26e02740551d1c26a1eebc SHA256 cafd999a490f05366066a54e387f18be4935e566777d0c150d12633d24494274
+EBUILD libtpproto-cpp-0.1.0.ebuild 922 RMD160 3efade9d0a70b51f2c4dc549489dd2471ad865cc SHA1 a173b0e7ff88f0990b8d2325a16d61a96786ed97 SHA256 c4de98a99637a6e9ccbfdae84c709288a49502cc30268bffddf40061d9b9aa6d
+MISC ChangeLog 381 RMD160 901c955cae0d54f928b9368e66e74d8396719172 SHA1 6c61bb9035ed11ed10560bfe7296e239f6ef5ae7 SHA256 31dc17b5cf37dd651dfb62879f3b1d87c7b334d305fc9dc514ed13f998bced11
 MISC metadata.xml 375 RMD160 9a3a066e62cdbfcb7fb2f14b35a482f375e4ed33 SHA1 648c02c63f450ca1080f13c9a2caa20178a7e9d7 SHA256 7a74f92bc3e30cc68545f4b8e0bec8188a1c9d2bf580e49b9d158cd052930718
