@@ -2,6 +2,6 @@ AUX tpserver.conf 1001 RMD160 faf1d5eb7eaa83e5a30e7b4d50165149588ef35a SHA1 4b41
 DIST tpserver-cpp-0.4.1.tar.gz 800432 RMD160 fc3516f1c33aada2a40cddc8c2ad7ee6d85d1955 SHA1 ad21a3d4cb8cba5d84d8a32ad65da338047561c1 SHA256 71e10f6e660a6ba10a2d47314893001f416792b72d78be30922a7c2dde1a8133
 DIST tpserver-cpp-0.5.0.tar.gz 895399 RMD160 829a773bb6184e08f902f0cb21db8d8e2c080602 SHA1 f6df744d7a35ede479090656c49deb7460878273 SHA256 7f124c345d945a3886a0573bf78fead78831b9af68abd276b67186430a22c1c2
 EBUILD tpserver-cpp-0.4.1.ebuild 1020 RMD160 ebf0839601b244903d76d69521a2f643a8279bf2 SHA1 2771b507a09f5b710643db2b228dea741d10c123 SHA256 3303065e36b37fb9d389ca18559714e80ee4b49cd4420b56d5b10fbd2fbe4ce5
-EBUILD tpserver-cpp-0.5.0.ebuild 1020 RMD160 ebf0839601b244903d76d69521a2f643a8279bf2 SHA1 2771b507a09f5b710643db2b228dea741d10c123 SHA256 3303065e36b37fb9d389ca18559714e80ee4b49cd4420b56d5b10fbd2fbe4ce5
-MISC ChangeLog 470 RMD160 b23253b128b7999bd3b54789080d308b88bd70db SHA1 d6c42911f1efe74a7e6e52baba161fd0410fdfd3 SHA256 46dee5ee100477c327a1b56a953208026e0992e206d6e0298e1fe4425645c926
+EBUILD tpserver-cpp-0.5.0.ebuild 1237 RMD160 f8b07872a6e1b873560051d01d6e606bdb2d1043 SHA1 4cf1a8e6285aedd92ec3df800184a456d13f00f5 SHA256 c72f7bbd6ce0f56fdc94fcdde6ebe86b3710a1b9359a4f8a8a54a60caf094f2b
+MISC ChangeLog 595 RMD160 692b115c169be87532f09adf1dff8aa729eee8bf SHA1 c5a2e8e0b2d22b6fb88f404a3e6fb229cb6ee218 SHA256 0f8a0ec2b681b61952b3d6612ef1d85f487234eb64cafb2c63748e862d89ac39
 MISC metadata.xml 332 RMD160 28be196bd790f6bcfcecc629fbf4ce97b3364a24 SHA1 dfca2d8c53772720037e0f1cc64f0e9867cfcc0a SHA256 0ada152869a9d95832438d11fd527b8e2016092b0908721da628ee2d99841357
