@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Jun 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.5.0.ebuild:
+  Added Boost dependency and use games eclass
+
 *tpserver-cpp-0.5.0 (01 May 2008)
 
   01 May 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.5.0.ebuild:
